crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_file_symbols_engine_cpp.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 100,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "id": "[testdata]/engine.cpp:DebugEngine::dumpState",
      "kind": "method",
      "line": 20,
      "name": "dumpState",
      "parent": "DebugEngine"
    },
    {
      "id": "[testdata]/engine.cpp:Engine::Engine",
      "kind": "method",
      "line": 4,
      "name": "Engine",
      "parent": "Engine"
    },
    {
      "id": "[testdata]/engine.cpp:Engine::render",
      "kind": "method",
      "line": 12,
      "name": "render",
      "parent": "Engine"
    },
    {
      "id": "[testdata]/engine.cpp:Engine::status",
      "kind": "method",
      "line": 16,
      "name": "status",
      "parent": "Engine"
    },
    {
      "id": "[testdata]/engine.cpp:Engine::update",
      "kind": "method",
      "line": 6,
      "name": "update",
      "parent": "Engine"
    }
  ],
  "total": 5,
  "truncated": false
}
