crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_file_symbols_go_reader.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 100,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/reader.go",
      "id": "[testdata]/reader.go:MyReader",
      "kind": "struct",
      "line": 7,
      "name": "MyReader",
      "namespace": "main"
    },
    {
      "file": "[testdata]/reader.go",
      "id": "[testdata]/reader.go:MyReader::Read",
      "kind": "method",
      "line": 9,
      "name": "Read",
      "namespace": "main",
      "parent": "MyReader"
    },
    {
      "file": "[testdata]/reader.go",
      "id": "[testdata]/reader.go:Reader",
      "kind": "interface",
      "line": 3,
      "name": "Reader",
      "namespace": "main"
    }
  ],
  "total": 3
}
