crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_file_symbols_python_models.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 100,
  "next_offset": null,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/models.py",
      "id": "[testdata]/models.py:Animal",
      "kind": "class",
      "line": 4,
      "name": "Animal"
    },
    {
      "file": "[testdata]/models.py",
      "id": "[testdata]/models.py:Animal::__init__",
      "kind": "method",
      "line": 5,
      "name": "__init__",
      "parent": "Animal"
    },
    {
      "file": "[testdata]/models.py",
      "id": "[testdata]/models.py:Animal::speak",
      "kind": "method",
      "line": 7,
      "name": "speak",
      "parent": "Animal"
    },
    {
      "file": "[testdata]/models.py",
      "id": "[testdata]/models.py:Dog",
      "kind": "class",
      "line": 10,
      "name": "Dog"
    },
    {
      "file": "[testdata]/models.py",
      "id": "[testdata]/models.py:Dog::speak",
      "kind": "method",
      "line": 11,
      "name": "speak",
      "parent": "Dog"
    }
  ],
  "total": 5,
  "truncated": false
}
