crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_orphans_byte_budget_truncated.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
assertion_line: 441
expression: parsed
---
{
  "limit": 20,
  "next_offset": 3,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_000",
      "kind": "function",
      "line": 1,
      "name": "func_000"
    },
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_001",
      "kind": "function",
      "line": 2,
      "name": "func_001"
    },
    {
      "file": "[testdata]/orphans.cpp",
      "id": "[testdata]/orphans.cpp:func_002",
      "kind": "function",
      "line": 3,
      "name": "func_002"
    }
  ],
  "total": 25,
  "truncated": true
}
