crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_orphans_offset_beyond_total.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 20,
  "offset": 999,
  "results": [],
  "total": 5
}
