crates/code-graph-tools/tests/snapshots/snapshot_responses__response_get_symbol_at_no_enclosing_symbol.snap
---
source: crates/code-graph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 100,
  "next_offset": null,
  "offset": 0,
  "results": [],
  "total": 0,
  "truncated": false
}
